<resources>
    <string name="app_name">Profiles</string>
    <string name="action_settings">Settings</string>
    <string name="action_delete">Delete</string>
    <string name="photo">Photo</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="age_dots">Age: %d</string>
    <string name="gender_dots">Gender: %s</string>
    <string name="hobbies">Hobbies</string>
    <string name="hobbies_dots">Hobbies:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="add_person">Add person</string>
    <string name="save">Save</string>
    <string name="image">Image</string>
    <string name="update">update</string>
    <string name="all">All</string>
    <string name="filter_title">Filter</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="action_filter">Filter</string>
    <string name="action_sort">Sort</string>
    <string name="sort_name_asc"><![CDATA[Name (A->Z)]]></string>
    <string name="sort_name_desc"><![CDATA[Name (Z->A)]]></string>
    <string name="sort_age_asc"><![CDATA[Age (0->9)]]></string>
    <string name="sort_age_desc"><![CDATA[Age (9->0)]]></string>
    <string name="sort_none">None</string>
    <string name="title_profile_add">Add profile</string>
    <string name="title_profile_view">Profile</string>
    <string name="delete_confirmation">Delete profile?</string>
    <string name="no_image">No image</string>
</resources>
