<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="org.digicraft.profiles.ui.mainactivity.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:visible="false"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_filter"
        android:orderInCategory="200"
        android:title="@string/action_filter"
        android:visible="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sort"
        android:orderInCategory="300"
        android:title="@string/action_sort"
        android:visible="true"
        app:showAsAction="never" />


</menu>
